--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   shared_preferences: 0.5.3
   fluro: "^1.4.0"
   barcode_scan: ^1.0.0
+  fluttertoast: ^4.0.1
+  url_launcher: 5.2.0
 
 dev_dependencies:
   flutter_test:
