--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -33,6 +33,8 @@ dependencies:
   barcode_scan: ^1.0.0
   fluttertoast: ^4.0.1
   url_launcher: 5.2.0
+  flutter_bugly: 0.2.9
+  jpush_flutter: 0.1.0
 
 dev_dependencies:
   flutter_test:
