--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+2
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -35,6 +35,11 @@ dependencies:
   url_launcher: 5.2.0
   flutter_bugly: 0.2.9
   jpush_flutter: 0.1.0
+  flutter_downloader: ^1.4.0
+  path_provider: 1.6.0
+  open_file: 3.0.0
+  permission_handler: ^4.3.0
+  file_utils: ^0.1.3
 
 dev_dependencies:
   flutter_test:
