--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   open_file: 3.0.0
   permission_handler: ^4.3.0
   file_utils: ^0.1.3
+  cached_network_image: 2.2.0
 
 dev_dependencies:
   flutter_test:
